[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/team-gunner.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/PlayerInput.gd" type="Script" id=3]
[ext_resource path="res://scripts/PlayerAnimation.gd" type="Script" id=4]
[ext_resource path="res://assets/MuzzleFlash.png" type="Texture" id=5]
[ext_resource path="res://scripts/GunPoint.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/GunPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 1.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Died"

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Body/GunPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/GunPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, -2.5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/GunPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 17, -3 ), Vector2( 17, -5 ), Vector2( 17, -2 ), Vector2( 17, -4 ), Vector2( 17, -5 ), Vector2( 17, -2 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 14 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 1 )
anims/Died = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/Run = SubResource( 5 )
script = ExtResource( 4 )
sprite_path = NodePath("../Body/Sprite")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )
vframes = 5
hframes = 24
frame = 14

[node name="GunPoint" type="Position2D" parent="Body"]
position = Vector2( 17, -2 )
script = ExtResource( 6 )
__meta__ = {
"_gizmo_extents_": 3.0
}
firerate = 0.2
input_path = NodePath("../../PlayerInput")

[node name="Effect" type="Sprite" parent="Body/GunPoint"]
position = Vector2( 0, -1 )
texture = ExtResource( 5 )
offset = Vector2( 3, 1 )

[node name="Firerate" type="Timer" parent="Body/GunPoint"]

[node name="EffectTimer" type="Timer" parent="Body/GunPoint"]
wait_time = 0.1
[connection signal="timeout" from="Body/GunPoint/Firerate" to="Body/GunPoint" method="_on_Firerate_timeout"]
[connection signal="timeout" from="Body/GunPoint/EffectTimer" to="Body/GunPoint" method="_on_EffectTimer_timeout"]
